<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="song_album">Song Album</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">00:00</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_text">Welcome to music</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="min_15">15</string>
    <string name="min_30">30</string>
    <string name="min_60">60</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Sneha</string>
    <string name="add_song">add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
</resources>