<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/black"
            android:contentDescription="@string/back_btn"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/world_of_music"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_favorite_empty_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_btn" />
    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:shapeAppearanceOverlay="@style/rounded_square"
        app:strokeColor="@color/blue"
        app:strokeWidth="5dp"/>
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_previous_icon"
            app:iconSize="40dp"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_pause_icon"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/rounded_square"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_next_icon"
            app:iconSize="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/start_tv"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/end_tv"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_repeat_icon"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_btn"
            tools:ignore="NestedWeights" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_equalizer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:layout_weight="1"
            android:contentDescription="@string/equalizer_btn" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_timer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:layout_weight="1"
            android:contentDescription="@string/timer_btn" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_share_icon"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:layout_weight="1"
            android:contentDescription="@string/share_btn" />
    </LinearLayout>
</LinearLayout>