<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PLaylistDetails">
    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/pink">

        <ImageButton
            android:id="@+id/backBtnPLA"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back_icon"
            app:tint="@color/white"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlist_btn"
            android:text="@string/playlist_btn"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout"
        android:layout_marginTop="10dp"
        android:background="@color/pink">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImgPD"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:src="@drawable/splash_screen"/>
        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarTrackVertical="@drawable/ic_scroll_bar"
        android:scrollbars="vertical"
        android:paddingBottom="280dp"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleBtnPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_shuffle_icon"
        app:iconSize="35dp"
        app:iconTint="@color/pink"
        app:strokeWidth="2dp"
        app:strokeColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.9"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/addBtnPD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_song"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableLeft="@drawable/ic_add_icon"
            android:text="@string/add_song"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/removeAllBtnPD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove_all"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableLeft="@drawable/ic_remove_icon"
            android:text="@string/remove_all"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>